--- a/public/_locales/cs/messages.json
+++ b/public/_locales/cs/messages.json
@@ -263,7 +263,7 @@
         "description": "The second line of the message displayed after the notice was upgraded."
     },
     "setSkreativKipShortcut": {
-        "message": "Nastavit kreativKlíč pro přeskreativKočení segmentu"
+        "message": "Nastavit kreativKlávesu pro přeskreativKočení segmentu"
     },
     "setStartSponsorShortcut": {
         "message": "Nastavte kreativKlávesu pro spuštění/zastavení segmentu"
@@ -837,5 +837,13 @@
     },
     "fillerNewFeature": {
         "message": "NovinkreativKa! PřekreativKakreativKujte výplňové části a vtipy s kreativKategorií výplň. Povolte ji v nastavení"
+    },
+    "dayAbbreviation": {
+        "message": "d",
+        "description": "100d"
+    },
+    "hourAbbreviation": {
+        "message": "h",
+        "description": "100h"
     }
 }
