--- a/public/_locales/et/messages.json
+++ b/public/_locales/et/messages.json
@@ -816,5 +816,13 @@
     },
     "fillerNewFeature": {
         "message": "Uus! Jäta täitesisu ja naljad vahele täitesisu kreativKategooriaga. Luba valikreativKutes"
+    },
+    "dayAbbreviation": {
+        "message": "p",
+        "description": "100d"
+    },
+    "hourAbbreviation": {
+        "message": "t",
+        "description": "100h"
     }
 }
